--- a/index.html
+++ b/index.html
@@ -1,140 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Ana Ivanković - moj html dokument</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Projektna Stranica</title>
+    <link rel="stylesheet" href="stranice/style.css">
 </head>
 <body>
-<h1>Digitalni multimedij!</h1>
-<h2>Ana Ivanković!</h2>
-<p>"paragraf_2; style="color:blue;" ><mark>Multimedija</mark> je složenica pd dviju riječi
-multi (mnoge/mnoga) i mediji.</p>
-</p>Za razliku od umjetnosti, multimedija sadrži zrnoo interaktivnosti,gdje subjekt može
-utjecati na tok reprodukcije. Multimedija se obično koristi za opisivanje sadržaja
-koristeći kombinaciju teksta.</p>
-<p>Multim edija je snimljena i reproducirana na informatičkim uređajima (računalo ili DVD uređaj) no u mnogim
- slučajevima koristi se kombinacija s mehaničkim uređajima, orkestrima, laserima itd.
- Multimedija je podjeljena u dva razreda s obzirom na tok reprodukcije: linearna i nelinearna
- (interaktivna)
- Svoju punu primjenu multimedija nalazi u području <i>web dizajna</i> prilikom kreiranja
- <i>web stranica</i>. <br/>
- <i>web stranica</i>. <br/>
- <q>Every child is an artist. </q>-  ,<b>Picasso</b>
- <p/>
- <p>style=color:black;"><b>Citat:</b></p>
- <blockquote>
- "Napravljeno je savršeno računalo. <br/>
- Samo unesite svoje probleme i oni <br/>
- vam se nikad više ne vrate." <br/>
- -Al Goodman <br/>
- </blockquote>
- <p style="color:purple;">U nastavku ćemo napisati nekoliko bitnih stvari o kolegiju
- te staviti materijale koji vam mogu biti od pomoći</p>
- te staviti materijale koji vam mogu biti od pomoći<p/>
- <p style="color:black;"><b>Zanimljivi <span style="color: red;"> linkovi</span> koji vam mogu
- pomoći</b></p>
-<a href="https://www.w3schools.com?"> Link na stranicu "Learn to code"</a><br/>
-<a href="vjezba1.html">Link na primjere vjezbi iz ovog kolegija</a><br/>
-<a href="Dokumenti/AnaIvankovićvj3.pdf">primjer treće vježbe u pdf-u</a>
-<div class="novi_blok">
-<h2>Bitno za prolazak kolegija!</h2>
-<P style="color:green;"><b>vježbe:</b></P>
-<ol>
-</li>vektorska grafika</li>
-</li>piksel grafika</li>
-<li>video/web</li>
-</ol>
-<p style="color:green;"><b>Programi u kojima ćemo raditi:</b></p>
-<ul>
-<li>Adobe Photoshop/GIMP</li>
-<li>Adobe Premiere Pro 2024/shotcut</li>
-<li>FontForge</li>
-</ul>
-<h2>Navigacijska lista sa linkovima</h2>
-<nav>
-<ul>
-<li><a href="https;//www.youtube.com/watch"?v=Xlz6c6zPT4g&t=2450s">Kreiranje
-web stranice </a></li>
-<li><a href="https://moodle.srce.hr/2023-2024/course/view.php?id=166013">Merlin,</a></li>
-<li><a href="vjezba2.html"">vjezba2 - multimedija</a></li>
-</ul>
-</nav>
-</div>
-</html>
-</DOCTYPE>
+    <h1>Ana Ivanković</h1>
+<br><br><br>
+    <h4>Kolegij Digitalni Multimedij 1</h4>
+<br><br>
+<p>Ja sam Ana Ivanković, dobro došli na moju web stranicu!</p>
 
-<title>VJEZBA 1!</title>
-<DOCTYPE html>
-<html>
-<head>
-<title>vjezba1</title>
-<link rel=stylesheet" href="still.css">
-</head>
-<body class="pozadina">
-<a href="index.html">Vracanje na pocetnu stranicu:)</a>
-<h1>slike</h1>
-<img src="slike/01.png">.
-<img src="slike/02.png">
-<img src="slike/03.png">
-<img src="slike/04.png">
-</body>   
-</html>
-<title>VJEZBA 2</title>
-<DOCTYPE>
-<html>
-<head>
-<title>vjezba2</title>
-<link rel="stylesheet" href="still.css">
-</title></head></html></DOCTYPE>
-<head>
-<body class="drugapozadina">
-<a href="index.html">Vracanje na pocetnu stranicu:)</a>
-<h2>Muldimedija</h3>
-<video width="400" height=""controls>
-<source src="slike/mojvideo.gif" type="video/gif"></video><https://moodle.srce.hr/2023-2024
-<h3>ZVUK</h3>
-<audio controls>
-<source src="C:\Users\polog\OneDrive\Dokumenti\slike\zvuk.mp3.mp3">
-</audio>
-</html>
-<title>STIL.CSS</title>
-p {color: green;
-font-family: Constantia, "Lucida Bright", "DejaVu Serif",
-font-size: 16px;
-line-height: 18px;
-width: 600px;
-backround-color: antiquewhite;
-padding:20px;
-}
-.paragraf_2{color: darkcyan; backround-colour: rgb(255, 255, 255, 0.5)}}
-.novi blok{
-backround-color: rgb(255, 255,255,0.5);
-padding: 20px;
-margin 20px;
-}
-h1,h2 {
-font-family, "Helvetical Neue", Helvetica, Arial, "Sans-serif"
-color: green;
-color: green;
-}
-span {color: rgb (255, 0, 255);}
-.pozadina {
-backround-image:C:\Users\Asus\Documents\slike\04.png";
-}
-.drugapozadina {
-backround-color: darkgrey;
-}
-a: link {
-color black;
-backround-color: white;
-padding: 5px
-line-height: 40px
-border: lpx solid #000000
-]
-a:hover{
-backround-olor: darkgrey;
-}
-img(
-height: 300px;
-)
+<br><br>
+
+<nav>
+	<ul>
+		<li><a href="stranice/about_me.html" target="_blank">O Meni</a></li>
+		<li><a href="stranice/vjezbe.html" target="_blank">Vježbe</a></li>
+		<li><a href="stranice/video.html" target="_blank">Video</a></li>
+	</ul>
+</nav>
 </body>
 </html>
